--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,31 +3,71 @@
     padding: 0;
 }
 body{
-    background-color: yellow
+    background-color: rgb(54, 53, 53);
 }
 .corpo{
     border: 2px solid black;
+    border-radius: 5px;
     align-items: center;
-    background-color: blue;
+    background-color: rgb(36, 35, 35);
     display: block;   
     margin: auto;
-    max-width: 500px; 
+    max-width: 500px;
+    width: 300px;
+    height: 280px;
+    margin-top: 100px;
+    position: relative;
+    padding: 30px;
 }
+
 div{
     display: block;
 }
 h1{
     text-align: center;
+    color: rgb(28, 211, 211);
 }
 h2{
-    background-color: green;
     display: inline-block;
+    font-size: 24px;
+    color: rgb(104, 104, 104);
 }
 #usuario, #senha{
     height: 1px;
     width: 300px;
     max-width: 80%;
-    background-color: red;
-    transition: 0.5s;
+    background-color: rgb(28, 211, 211);
+    transition: 1s;
     display: block;
+}
+
+button{
+    background-color: rgb(28, 211, 211);
+    width: 100px;
+    font-family: fantasy;
+    border-radius: 8px;
+    display: block;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 10px;
+    
+}
+
+.login{
+    padding-top: 20px;
+}
+.forgotpassword{
+    margin-top: 15px;
+    color: rgb(104, 104, 104);
+    width: 115px;
+    display: inline-block;
+    font-size: 15px;
+}
+.signup{
+    display: inline-block;
+    width: 50px;
+    color: rgb(28, 211, 211);
+    margin-left: 100px;
+    font-size: 12px;
 }
